--- a/honkalculate.html
+++ b/honkalculate.html
@@ -355,26 +355,7 @@ title: Battle Facilities Mass Calculator
                     </div>
                     <div class="gen-specific g9">
                         <label>Tera Type</label>
-                        <select class="tera-type calc-trigger">
-                            <option value="Normal" selected="selected">Normal</option>
-                            <option value="Grass">Grass</option>
-                            <option value="Fire">Fire</option>
-                            <option value="Water">Water</option>
-                            <option value="Electric">Electric</option>
-                            <option value="Ice">Ice</option>
-                            <option value="Flying">Flying</option>
-                            <option value="Bug">Bug</option>
-                            <option value="Poison">Poison</option>
-                            <option value="Ground">Ground</option>
-                            <option value="Rock">Rock</option>
-                            <option value="Fighting">Fighting</option>
-                            <option value="Psychic">Psychic</option>
-                            <option value="Ghost">Ghost</option>
-                            <option value="Dragon">Dragon</option>
-                            <option value="Dark">Dark</option>
-                            <option value="Steel">Steel</option>
-                            <option value="Fairy">Fairy</option>
-                        </select>
+                        <select class="tera-type terrain-trigger calc-trigger"></select>
                         <input class="tera calc-trigger btn-input" type="checkbox" id="teraL" /><label class="btn btn-wide gen-specific g9" for="teraL" style="width: 7em" title="Terastallize this Pokémon?">Terastallize <img src="../_images/tera.png" style="vertical-align: middle"></label>
                     </div>
                 </div>
