--- a/index.html
+++ b/index.html
@@ -356,26 +356,7 @@ title: Battle Facilities Calculator
 				</div>
 				<div class="gen-specific g9">
                         <label>Tera Type</label>
-                        <select class="tera-type calc-trigger">
-                            <option value="Normal" selected="selected">Normal</option>
-                            <option value="Grass">Grass</option>
-                            <option value="Fire">Fire</option>
-                            <option value="Water">Water</option>
-                            <option value="Electric">Electric</option>
-                            <option value="Ice">Ice</option>
-                            <option value="Flying">Flying</option>
-                            <option value="Bug">Bug</option>
-                            <option value="Poison">Poison</option>
-                            <option value="Ground">Ground</option>
-                            <option value="Rock">Rock</option>
-                            <option value="Fighting">Fighting</option>
-                            <option value="Psychic">Psychic</option>
-                            <option value="Ghost">Ghost</option>
-                            <option value="Dragon">Dragon</option>
-                            <option value="Dark">Dark</option>
-                            <option value="Steel">Steel</option>
-                            <option value="Fairy">Fairy</option>
-                        </select>
+                        <select class="tera-type terrain-trigger calc-trigger"></select>
                         <input class="tera calc-trigger btn-input" type="checkbox" id="teraL" /><label class="btn btn-wide gen-specific g9" for="teraL" style="width: 7em" title="Terastallize this Pokémon?">Terastallize <img src="../_images/tera.png" style="vertical-align: middle"></label>
                     </div>
 			</div>
@@ -704,7 +685,10 @@ title: Battle Facilities Calculator
 				<textarea rows="9" cols="40" id="customMon"></textarea>
 				<br>
 				<script type="text/javascript" src="../_scripts/import_custom.js"></script>
-				<button type="button" onclick="savecustom()">Save</button> <button type="button" onclick="deletecustom()">Delete Custom Sets</button> <button id="migrate" type="button" onclick="migrateOldSets()">Migrate Old Sets</button>
+				<div>
+					<button type="button" onclick="savecustom()">Save</button> <button type="button" onclick="deletecustom()">Delete Custom Sets</button> <button id="migrate" type="button" onclick="migrateOldSets()">Migrate Old Sets</button>
+					<input class="right gen-specific g8 g9" type="checkbox" id="startGimmick"><label class="right gen-specific g8 g9" for="startGimmick" id="startGimmick-label">Start</label>
+				</div>
 
 				<p>You may need to refresh the page after deleting your custom sets. If you encounter a bug, please try deleting your cookies or reporting it!</p>
 			</span>
@@ -1014,26 +998,7 @@ title: Battle Facilities Calculator
 				</div>
 				<div class="gen-specific g9">
                     <label>Tera Type</label>
-                    <select class="tera-type calc-trigger">
-                        <option value="Normal" selected="selected">Normal</option>
-                        <option value="Grass">Grass</option>
-                        <option value="Fire">Fire</option>
-                        <option value="Water">Water</option>
-                        <option value="Electric">Electric</option>
-                        <option value="Ice">Ice</option>
-                        <option value="Flying">Flying</option>
-                        <option value="Bug">Bug</option>
-                        <option value="Poison">Poison</option>
-                        <option value="Ground">Ground</option>
-                        <option value="Rock">Rock</option>
-                        <option value="Fighting">Fighting</option>
-                        <option value="Psychic">Psychic</option>
-                        <option value="Ghost">Ghost</option>
-                        <option value="Dragon">Dragon</option>
-                        <option value="Dark">Dark</option>
-                        <option value="Steel">Steel</option>
-                        <option value="Fairy">Fairy</option>
-                    </select>
+                    <select class="tera-type terrain-trigger calc-trigger"></select>
                     <input class="tera calc-trigger btn-input" type="checkbox" id="teraR" /><label class="btn btn-wide gen-specific g9" for="teraR" style="width: 7em" title="Terastallize this Pokémon?">Terastallize <img src="../_images/tera.png" style="vertical-align: middle"></label>
                 </div>
 			</div>
