mass calc ohko counter

--- a/honkalculate.html
+++ b/honkalculate.html
@@ -685,7 +685,10 @@ title: Battle Facilities Mass Calculator
     <div><!--Start Damage Results panel-->
         <fieldset class="panel holder-0" style="min-width:845px">
             <div class="panel-heading">
-                <h4 class="panel-title">Damage Results</h4>
+                <h4 class="panel-title">
+                    Damage Results
+                    <div class="panel-title" id="ohkoCounter" style="float: right"></div>
+                </h4>
             </div>
             <table class="hide display" id="holder-2">
                 <thead>
