--- a/honkalculate.html
+++ b/honkalculate.html
@@ -567,7 +567,8 @@ title: Battle Facilities Mass Calculator
                         <input class="btn-input calc-trigger" type="checkbox" id="foresightR" /><label class="btn btn-wide" for="foresightR">Foresight</label>
                     </div>
                 </div>-->
-                <div class="btn-group gen-specific g6 g7 g8 g80 g9">
+                <div class="btn-group hide">
+                <!--div class="btn-group gen-specific g6 g7 g8 g80 g9"-->
                     <div class="left" title="Has this Pokemon used Minimize?">
                         <input class="btn-input calc-trigger" type="checkbox" id="minimL" /><label class="btn btn-xwide" for="minimL">Minimize</label>
                     </div>
