mass pokemon speed

--- a/honkalculate.html
+++ b/honkalculate.html
@@ -699,8 +699,9 @@ title: Battle Facilities Mass Calculator
                         <th>Best Move</th><!-- 1 -->
                         <th>Damage (%)</th><!-- 2 -->
                         <th>KO Chance</th><!-- 3 -->
-                        <th>Type 1</th><!-- 4 -->
-                        <th>Type 2</th><!-- 5 -->
+                        <th>Speed</th><!-- 4 -->
+                        <th>Type 1</th><!-- 5 -->
+                        <th>Type 2</th><!-- 6 -->
                     </tr>
                 </thead>
             </table>
